# maestro-fetch

./: .gitignore  README.md  llms.txt  pyproject.toml  pyrightconfig.json
.claude/skills/fetch/: SKILL.md
benchmarks/: bench_cdp_social.py
benchmarks/results/: cdp_social.json  cdp_social_final.json  cdp_social_loggedin.json  cdp_social_others.json  cdp_social_v2.json
docs/: maestro-memory-research.md
docs/superpowers/specs/: 2026-03-15-maestro-fetch-v2-design.md
examples/: china_weather_historical.py
maestro_fetch/: __init__.py
maestro_fetch/adapters/: __init__.py  baidu_pan.py  binary.py  cloud.py  doc.py  web.py
maestro_fetch/core/: config.py  errors.py  fetcher.py  result.py  router.py
maestro_fetch/interfaces/: cli.py  mcp_server.py  sdk.py
maestro_fetch/skill/: maestro-data-fetch.md
skill/: SKILL.md
src/maestro_fetch/adapters/: baidu_pan.py  browser.py  web.py
src/maestro_fetch/backends/: __init__.py  browser_use.py  cdp.py  cdp_actions.py  cloudflare.py  opencli.py  playwright.py
src/maestro_fetch/cli/: __init__.py  cache_cmd.py  config_cmd.py  discover_cmd.py  do_cmd.py  fetch.py  session.py  source.py
src/maestro_fetch/core/: action_router.py  cache.py  config.py  platform_registry.py  session.py
src/maestro_fetch/sources/: loader.py
src/maestro_fetch/sources/community/academic/arxiv/: search.py
src/maestro_fetch/sources/community/climate/openmeteo/: archive.py
src/maestro_fetch/sources/community/economics/worldbank/: gdp.py
src/maestro_fetch/sources/community/social/github/: trending.py
src/maestro_fetch/sources/community/social/hackernews/: front.py
src/maestro_fetch/sources/community/social/reddit/: frontpage.py  hot.py  search.py  subreddit.py
src/maestro_fetch/sources/community/social/twitter/: _utils.py  search.py  timeline.py  trending.py
tests/: test_cache.py  test_cdp_actions.py  test_cli_v2.py
tests/integration/: test_real_csv.py  test_real_excel.py
tests/unit/: test_fetcher.py  test_mcp.py  test_result.py  test_router.py
tests/unit/fixtures/: sample.xlsx
tests/unit/test_adapters/: test_doc.py
