[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-fetch"
version = "0.1.0"
description = "Fetch data from any URL — web, PDF, cloud, video, images"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maestro AI", email = "hello@maestro.onl" }]
keywords = ["web-scraping", "data-acquisition", "pdf", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "crawl4ai>=0.4.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pandas>=2.2",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
pdf = ["docling>=2.0", "openpyxl>=3.1"]
media = ["yt-dlp>=2024.1", "openai-whisper>=20231117"]
vision = []  # uses providers; no extra deps
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
gemini = ["google-generativeai>=0.7"]
ollama = ["ollama>=0.3"]
mcp = ["fastmcp>=0.1"]
all = [
    "maestro-fetch[pdf]",
    "maestro-fetch[media]",
    "maestro-fetch[vision]",
    "maestro-fetch[anthropic]",
    "maestro-fetch[openai]",
    "maestro-fetch[mcp]",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "tabulate>=0.9"]

[project.scripts]
maestro-fetch = "maestro_fetch.interfaces.cli:app"
maestro-fetch-mcp = "maestro_fetch.interfaces.mcp_server:run"

[tool.hatch.build.targets.wheel]
packages = ["maestro_fetch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
