[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-fetch"
version = "0.2.0"
description = "Fetch everything, for agents. Universal data acquisition with smart routing."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Maestro AI", email = "hello@maestro.onl"}]
keywords = ["agent", "fetch", "scraping", "data-acquisition", "llm", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "crawl4ai>=0.4.0",
    "httpx>=0.27",
    "html2text>=2024.2",
    "typer>=0.12",
    "pandas>=2.2",
    "aiofiles>=23.0",
    "aiosqlite>=0.20",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://maestro.onl"
Documentation = "https://maestro.onl/docs"
Repository = "https://github.com/maestro-ai-stack/maestro-fetch"
"Dataset Catalog" = "https://ra.maestro.onl/data/datasets"
"Data Services" = "https://ra.maestro.onl/data"

[project.scripts]
maestro-fetch = "maestro_fetch.cli:app"
mfetch = "maestro_fetch.cli:app"

[project.optional-dependencies]
pdf = ["docling>=2.0", "openpyxl>=3.1"]
media = ["yt-dlp>=2024.1", "openai-whisper>=20231117"]
browser = ["playwright>=1.40"]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
social = ["twikit>=2.0", "praw>=7.7"]
ai-browser = ["browser-use>=0.2", "langchain-anthropic>=0.3"]
all = [
    "maestro-fetch[pdf]",
    "maestro-fetch[media]",
    "maestro-fetch[browser]",
    "maestro-fetch[anthropic]",
    "maestro-fetch[openai]",
    "maestro-fetch[social]",
    "maestro-fetch[ai-browser]",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.14", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/maestro_fetch"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["network: tests that require network access"]
